remove lsm with bloom implementation + make columns dynamic